--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -12,7 +12,7 @@
 
 }
 
-.editor {
+.atom-text-editor {
     .invisible-character {
         opacity: 1;
     }
@@ -24,7 +24,7 @@
     }
 }
 
-.editor .cursor {
+.atom-text-editor .cursor {
 
 }
 
